--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
-  <title>Dialog elements</title>
-</head>
-<body class="mat-app-background">
-  <dialog-elements-example>Loading</dialog-elements-example>
-  <span class="version-info">Current build: 12.2.5</span>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block"
+      rel="stylesheet"
+    />
+    <title>Dialog elements</title>
+  </head>
+  <body class="mat-app-background">
+    <dialog-elements-example>Loading</dialog-elements-example>
+  </body>
 </html>
-
 
 <!-- Copyright 2021 Google LLC. All Rights Reserved.
     Use of this source code is governed by an MIT-style license that
